refactor(jolt): clamp raycast hit counts
Signed-off-by: Blovien <blovien@hytalemodding.dev>